<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.meldingen.MeldingMakenFragment">

    <Button
        android:id="@+id/opslaan_button"
        android:layout_width="150dp"
        android:layout_height="49dp"
        android:layout_marginTop="64dp"
        android:layout_marginBottom="43dp"
        android:background="@drawable/button_veilig_thuis_homescreen"
        android:fontFamily="@font/montserrat"
        android:text="@string/meldingOpslaan_button"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/plaatsnaam_spinner" />

    <applab.veiligthuis.common.VeiligThuisToolbar
        android:id="@+id/veilig_thuis_toolbar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/veiligThuisToolbarHeight"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/sluitApp"
        android:layout_width="89dp"
        android:layout_height="203dp"
        android:src="@drawable/veiligthuis_sluitapp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.119" />

    <EditText
        android:id="@+id/meldingmaken_editTextTextMultiLine"
        android:layout_width="223dp"
        android:layout_height="159dp"
        android:layout_marginTop="316dp"
        android:ems="10"
        android:fontFamily="@font/montserrat"
        android:gravity="start|top"
        android:inputType="textMultiLine"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/bijlage_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:fontFamily="@font/montserrat"
        android:text="@string/bijlage"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/meldingmaken_editTextTextMultiLine" />

    <Spinner
        android:id="@+id/plaatsnaam_spinner"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:fontFamily="@font/montserrat"
        android:scrollbarSize="4dp"
        app:layout_constraintEnd_toEndOf="@+id/veilig_thuis_toolbar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bijlage_textView" />

</androidx.constraintlayout.widget.ConstraintLayout>